Remove deprecated method